--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,16 @@ html {
   cursor: pointer;
 }
 
+.tooltip {
+  position: relative;
+  text-align: left;
+  font-size: 10px;
+  font-style: italic;
+  color: grey;
+  left: 10%;
+  top: 0;
+}
+
 .delete-x:hover {
   width: 8px;
 }
@@ -185,8 +195,18 @@ tr {
 .tables-container {
   position: relative;
   width: 100%;
+  max-height: 50vh;
+  overflow: auto;
   display: flex;
   flex-direction: row;
+}
+
+.app-description-wrapper {
+  display: flex;
+  flex-direction: row;
+  .app-description {
+    flex-grow: 1;
+  }
 }
 
 .App-header {
