--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,8 @@ html {
   font-size: 11px;
   font-style: italic;
   color: grey;
-  left: 10%;
+  padding: 0 5px;
+  left: 5%;
   height: 20px;
   top: 0;
 }
@@ -223,17 +224,63 @@ tr {
   color: white;
 }
 .app-header {
+  position: relative;
+  display: flex;
+  flex-direction: row;
   margin-bottom: 40px;
+  background-color: $main-color;
   width: 100%;
-  .app-header-title {
-    padding: 16px 6px 6px 4px;
-    margin-top: 0;
-    margin-bottom: 25px;
-    height: 50px;
-    white-space: nowrap;
-    font-size: 30px;
+  padding: 16px 0 6px 0;
+  margin-top: 0;
+  height: 65px;
+  border-bottom: 1px solid grey;
+
+  .options-list, .menu-list {
+    position: absolute;
+    top: 85px;
+    z-index: 2;
+    border-bottom: 1px solid #404040;
     background-color: $main-color;
-    border-bottom: 1px solid grey;
+    width: 150px;
+    height: 150px;
+    input {
+      outline: none;
+      border: none;
+    }
+    .tooltip {
+      max-width: 135px;
+    }
+  }
+  .options-list {
+    border-left: 1px solid #404040;
+    right: 0;
+  }
+  .menu-list {
+    border-right: 1px solid #404040;
+    left: 0;
+  }
+  .burger-menu {
+    flex-grow: 0;
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    left: 25px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .app-header-title {
+    flex-grow: 1;
+    white-space: nowrap;
+    font-size: 24px;
+  }
+  .settings-menu {
+    flex-grow: 0;
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    right: 25px;
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
 
