--- a/src/App.scss
+++ b/src/App.scss
@@ -1,315 +1,323 @@
 $main-color: #101010;
 $accent-color: rgb(6, 37, 68);
 
-
-
 html {
-  font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 .App {
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
-  background: $accent-color url(https://dmszsuqyoe6y6.cloudfront.net/img/warcraft/header-bg.jpg?v=3) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  color: white;
-  min-height: 100vh;
-  padding-bottom: 15px;
-  overflow-x: hidden;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    background: $accent-color
+        url(https://dmszsuqyoe6y6.cloudfront.net/img/warcraft/header-bg.jpg?v=3)
+        no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: white;
+    min-height: 100vh;
+    padding-bottom: 15px;
+    overflow-x: hidden;
 }
 
 .delete-x {
-  position: absolute;
-  right: 8%;
-  top: 50%;
-  width: 9px;
-  transform: translateY(-50%);
-  cursor: pointer;
+    position: absolute;
+    right: 8%;
+    top: 50%;
+    width: 9px;
+    transform: translateY(-50%);
+    cursor: pointer;
 }
 
 .tooltip {
-  position: relative;
-  text-align: left;
-  font-size: 11px;
-  font-style: italic;
-  color: grey;
-  padding: 0 5px;
-  left: 4%;
-  height: 20px;
-  top: 0;
+    position: relative;
+    text-align: left;
+    font-size: 11px;
+    font-style: italic;
+    color: grey;
+    padding: 0 5px;
+    left: 4%;
+    height: 20px;
+    top: 0;
 }
 
 .delete-x:hover {
-  width: 8px;
+    width: 8px;
 }
 
 .table-header {
-  font-size: 15px;
-  white-space: nowrap;
+    font-size: 15px;
+    white-space: nowrap;
 }
 
 .solution-table {
-  margin: 10px;
-  width: calc(100% - 20px);
-  table-layout: fixed;
-  background-color: grey;
-  .solution-table-head {
-    background-color: $accent-color;
-  }
-  th {
-    font-size: 15px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  td {
-    width: 20%;
-  }
+    margin: 10px;
+    border-spacing: 0;
+    width: calc(100% - 20px);
+    table-layout: fixed;
+    background-color: grey;
+    .solution-table-head {
+        background-color: $accent-color;
+    }
+    th {
+        font-size: 15px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    td {
+        width: 20%;
+    }
+    tr:nth-child(even) {
+        background-color: #707070;
+    }
 }
 
 .placeholder {
-  height: 45px;
+    height: 45px;
 }
 
 .suggestion-list {
-  z-index: 2;
-  align-self: center;
-  justify-self: center;
-  padding: 8px;
-  background-color: #212121;
-  position: relative;
-  width: 88%;
-  right: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  .suggestion-item {
-    padding: 5px 0 5px 0;
-    cursor: pointer;
-  }
-  .suggestion-item:hover {
-    background-color: $accent-color;
-  }
+    z-index: 2;
+    align-self: center;
+    justify-self: center;
+    padding: 8px;
+    background-color: #212121;
+    position: relative;
+    width: 88%;
+    right: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    .suggestion-item {
+        padding: 5px 0 5px 0;
+        cursor: pointer;
+    }
+    .suggestion-item:hover {
+        background-color: $accent-color;
+    }
 }
 
-
 .timestamps-table {
-  td {
-    background-color: #404040;
-  }
-  td:nth-child(1), td:nth-child(3) {
-    width: 25%;
-  }
-  td:nth-child(2) {
-    width: 50%;
-  }
+    td {
+        background-color: #404040;
+    }
+    td:nth-child(1),
+    td:nth-child(3) {
+        width: 25%;
+    }
+    td:nth-child(2) {
+        width: 50%;
+    }
 }
 
 .cds-table {
-  td {
-    background-color: #404040;
-  }
+    td {
+        background-color: #404040;
+    }
 }
 
-.cds-section, .timestamps-section{
-  width: calc(50vh - 20px);
-  padding: 4px;
-  position: relative;
-  flex-grow: 0.5;
-  display: flex;
-  top: 10px;
-  bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  flex-direction: column;
-  background-color: $main-color;
-  table, tbody, thead {
+.cds-section,
+.timestamps-section {
+    width: calc(50vh - 20px);
+    padding: 4px;
     position: relative;
-  }
+    flex-grow: 0.5;
+    display: flex;
+    top: 10px;
+    bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    flex-direction: column;
+    background-color: $main-color;
+    table,
+    tbody,
+    thead {
+        position: relative;
+    }
 }
 
 tr {
-  height: 45px;
+    height: 45px;
 }
 
 .input-timestamps {
-  td:first-child {
-    width: 10%;
-  }
-  td:last-child {
-    width: 90%;
-  }
+    td:first-child {
+        width: 10%;
+    }
+    td:last-child {
+        width: 90%;
+    }
 }
 
 .add-button {
-  position: relative;
-  background-color: $accent-color;
-  color: white;
-  border: none;
-  height: 30px;
-  width: 150px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+    position: relative;
+    background-color: $accent-color;
+    color: white;
+    border: none;
+    height: 30px;
+    width: 150px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .double-input {
-  margin-top: 40px;
-  .timestamp-input {
-    margin: 3px 0;
-    flex-grow: 1;
-    width: 100%;
-  }
+    margin-top: 40px;
+    .timestamp-input {
+        margin: 3px 0;
+        flex-grow: 1;
+        width: 100%;
+    }
 }
 
 .simulate-button {
-  font-weight: bold;
-  border: none;
-  width: 150px;
-  height: 45px;
-  text-transform: uppercase;
-  color: white;
-  margin-top: 30px;
-  background-color: $accent-color;
+    font-weight: bold;
+    border: none;
+    width: 150px;
+    height: 45px;
+    text-transform: uppercase;
+    color: white;
+    margin-top: 30px;
+    background-color: $accent-color;
 }
 
 .timestamp-input {
-  position: relative;
-  input {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    padding: 8px;
-    width: 88%;
-    height: 25px;
-    color: white;
-    border: none;
-    outline: none;
-    background-color: #404040;
-
-  }
+    position: relative;
+    input {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        padding: 8px;
+        width: 88%;
+        height: 25px;
+        color: white;
+        border: none;
+        outline: none;
+        background-color: #404040;
+    }
 }
 
 .cd-input-section {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: row;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
 }
 
 .tables-container {
-  position: relative;
-  width: 100%;
-  //max-height: 50vh;
-  //overflow: auto;
-  display: flex;
-  flex-direction: row;
+    position: relative;
+    width: 100%;
+    //max-height: 50vh;
+    //overflow: auto;
+    display: flex;
+    flex-direction: row;
 }
 
 .app-description-wrapper {
-  display: flex;
-  flex-direction: row;
-  .app-description {
-    flex-grow: 1;
-  }
+    display: flex;
+    flex-direction: row;
+    .app-description {
+        flex-grow: 1;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 .app-header {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 40px;
-  background-color: $main-color;
-  width: 100%;
-  padding: 16px 0 6px 0;
-  margin-top: 0;
-  height: 65px;
-  border-bottom: 1px solid grey;
-  .options-list, .menu-list {
-    position: absolute;
-    top: 87px;
-    z-index: 2;
-    border-bottom: 1px solid #404040;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 40px;
     background-color: $main-color;
-    width: 150px;
-    height: 150px;
-    input {
-      width: 150px;
-      max-width: 140px;
-      outline: none;
-      border: none;
+    width: 100%;
+    padding: 16px 0 6px 0;
+    margin-top: 0;
+    height: 65px;
+    border-bottom: 1px solid grey;
+    .options-list,
+    .menu-list {
+        position: absolute;
+        top: 87px;
+        z-index: 2;
+        border-bottom: 1px solid #404040;
+        background-color: $main-color;
+        width: 150px;
+        height: 150px;
+        input {
+            width: 150px;
+            max-width: 140px;
+            outline: none;
+            border: none;
+        }
+        .tooltip {
+            max-width: 135px;
+        }
     }
-    .tooltip {
-      max-width: 135px;
+    .options-list {
+        border-left: 1px solid #404040;
+        right: 0;
     }
-  }
-  .options-list {
-    border-left: 1px solid #404040;
-    right: 0;
-  }
-  .menu-list {
-    border-right: 1px solid #404040;
-    left: 0;
-  }
-  .burger-menu {
-    flex-grow: 0;
-    position: absolute;
-    width: 35px;
-    height: 35px;
-    left: 25px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  .app-header-title {
-    flex-grow: 1;
-    white-space: nowrap;
-    font-size: 24px;
-  }
-  .settings-menu {
-    flex-grow: 0;
-    position: absolute;
-    width: 35px;
-    height: 35px;
-    right: 25px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+    .menu-list {
+        border-right: 1px solid #404040;
+        left: 0;
+    }
+    .burger-menu {
+        flex-grow: 0;
+        position: absolute;
+        width: 35px;
+        height: 35px;
+        left: 25px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .app-header-title {
+        flex-grow: 1;
+        white-space: nowrap;
+        font-size: 24px;
+    }
+    .settings-menu {
+        flex-grow: 0;
+        position: absolute;
+        width: 35px;
+        height: 35px;
+        right: 25px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
 }
 
 @media only screen and (max-width: 768px) {
-  .tables-container {
-    flex-direction: column;
-  }
-  .cds-section, .timestamps-section {
-    margin-bottom: 10px;
-    width: calc(100% - 30px);
-  }
-  .delete-x {
-    width: 6px;
-  }
-  .app-header {
-    .app-header-title {
-
-      font-size: 20px;
+    .tables-container {
+        flex-direction: column;
     }
-    .burger-menu, .settings-menu {
-      width: 25px;
-      height: 25px;
-      top: 50%;
+    .cds-section,
+    .timestamps-section {
+        margin-bottom: 10px;
+        width: calc(100% - 30px);
     }
-  }
+    .delete-x {
+        width: 6px;
+    }
+    .app-header {
+        .app-header-title {
+            font-size: 20px;
+        }
+        .burger-menu,
+        .settings-menu {
+            width: 25px;
+            height: 25px;
+            top: 50%;
+        }
+    }
 }
